fixed the css to align with the wireframe

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 * {
     margin: 5px;
-    padding: 0;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -15,57 +15,61 @@ h1, h2, h3, h4 {
     color: var(--primary-color);
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    margin: 0;
+    
 }
 
 header {
     background-color: var(--accent1-color);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-content: space-around;
+    place-items: center;
 
 }
 
-nav {
+.navigation {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    list-style-type: none;
     
-
-    
-
 }
 
-nav a {
-    padding: 0.5rem;
+nav li {
+    padding: 0.5rem 2rem;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
-    color: var(--accent2-color); 
+    color: var(--primary-color); 
     display: block;
-    border: 1px solid black;
-    padding: auto;
+    border: 1.5px solid black;
+    margin: 0;
+    background-color: var(--accent2-color);
     
-   
-   
+       
 }
+
+nav a {
+    text-decoration: none;
+}
+
 
 p {
     color: var(--primary-color);
     font-family: "Roboto", sans-serif;
 }
 
-.sociallinks a {
-    text-decoration: none;
-}
 .hero {
     position: relative;
+    margin: 0 0 15px;
 }
 
 .hero img {
     display: block;
     width: 100%;
     height: auto;
+    margin: 0;
 }
 
 
@@ -76,27 +80,125 @@ p {
     color: var(--accent2-color);
     text-align: center;
     background-color: rgba(12, 12, 12, 0.8);
+    margin: 0;
 
 }
 .hero article {
-    width: 800px;
+    width: auto;
     height: auto;
     position: absolute;
-    top: 70px;
-    left: 250px;
+    top: 150px;
+    right: 20px;
+    left: 20px;
     background-color: rgba(24, 48, 89, 0.7);
     padding: 5px;
+    margin: 0;
     
 }
 
 .hero article p {
     color: var(--accent2-color);
+    text-align: justify;
 }
 
 .hero article img {
-    width: 300px;
+    width: 200px;
     height: auto;
     float: right;
+    padding: 0 20px;
 
 }
+
+.section-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    place-items: center;
+    margin: 0;
+}
+
+.section-content {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    margin: 0 0 15px;
+}
+
+.history-item {
+    flex: 1;
+    text-align: justify;
+    margin: 0 20px;  
+}
+
+.adventure-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.adventure-image-container {
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;    
+}
+
+
+figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 220px;
+    margin: auto;
+    overflow: hidden;
+    justify-content: center;
+  }
+
+
+figure img {
+    width: 200px;
+    height: 150px;
+  }
+  
+figcaption {
+    background-color: #222;
+    color: #fff;
+    font: italic smaller sans-serif;
+    padding: 3px;
+    text-align: center;
+  }
+  
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+  
+footer p, .sociallinks {
+    grid-area: 1 / 1 / 2 / 2; 
+  }
+ 
+  footer p {
+    text-align: center;
+  }
+
+
+  .sociallinks {
+    justify-self: end; 
+    margin-right: 100px;
+ 
+}
+.sociallinks a {
+    text-decoration: none;
+   
+    
+    
+}
+
 
